[package]
name = "bbfpromix"
description = "ALSA Mixer Frontend for RME Babyface Pro (FS)"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
rustc-version = "1.76"
authors = ["Markus Kohlhase <markus.kohlhase@slowtec.de>"]
readme = "README.md"
homepage = "https://github.com/slowtec/bbfpromix"
repository = "https://github.com/slowtec/bbfpromix"

[dependencies]
alsa-sys = "0.3.1"
anyhow = "1.0.79"
env_logger = "0.11.1"
gio-sys = "0.19.0"
glib-sys = "0.19.0"
gobject-sys = "0.19.0"
gtk-sys = "0.18.0"
log = "0.4.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
